second fix on theme colors and overflowing images

--- a/src/app/_components/Footer/FooterComponent/index.module.scss
+++ b/src/app/_components/Footer/FooterComponent/index.module.scss
@@ -33,6 +33,8 @@
   color: white;
   @include small-break {
     grid-template-columns: repeat(2, 1fr);
+    border-radius: 5px;
+    box-shadow: 0 8px 8px rgba(0, 0, 0, 0.1);
   }
 
   @include mid-break {
