--- a/src/app/_components/Topbar/index.module.scss
+++ b/src/app/_components/Topbar/index.module.scss
@@ -27,3 +27,8 @@
 .phoneIcon{
     margin: 0 10px 0 10px;
 }
+.callback{
+    @include small-break{
+        display: none; 
+    }
+}
