--- a/src/app/_heros/PostHero/index.module.scss
+++ b/src/app/_heros/PostHero/index.module.scss
@@ -165,7 +165,7 @@ button.accordion.active + div {
   list-style: none;
   color: var(--theme-elevation-0);
   box-shadow: 0 8px 8px rgba(0, 0, 0, 0.1);
-  padding: 0;
+  padding: 5px;
   margin: 0;
   display: flex;
   justify-content: space-around;
@@ -174,12 +174,10 @@ button.accordion.active + div {
   max-width: 200px;
   min-height: 300px;
   max-height: 200px;
-  overflow: hidden;
   object-fit: cover;
-  border: 2px solid white;
   border-radius: 5px;
   @include mid-break {
-    max-width: 180px;
+    max-width: 2500px;
     min-height: 250px;
     max-height: 250px;
     gap: 5px;
@@ -187,7 +185,7 @@ button.accordion.active + div {
   }
 
   @include small-break {
-    max-width: 180px;
+    max-width: 250px;
     min-height: 160px;
     max-height: 160px;
     gap: 5px;
@@ -198,11 +196,15 @@ button.accordion.active + div {
   width: 100%;
   margin-top: 10px;
   align-items: flex-start;
-  justify-content: space-around;
-  margin: 20p;
+  justify-content: space-between;
   padding:0 20px 0 20px;
   color: #333; 
   background-color: #b88d5e;
+  @include small-break {
+    padding:0 5px 0 5px;
+    font-size: 16px;
+    
+  }
 }
 .images li {
   margin-right: 10px; /* Adjust as needed */
@@ -224,11 +226,26 @@ button.accordion.active + div {
   border-radius: 8px;
   /* Add border radius for rounded corners */
 }
+.imageFlex{
+  @include small-break {
+    overflow: scroll;
+  }
+}
+.imageFlex::-webkit-scrollbar {
+  display: none; /* Hide scrollbar for webkit browsers */
+}
+
+/* Optional: Hide scrollbar for Firefox */
+.imageFlex {
+  scrollbar-width: none;
+}
 .imageFlex ul{
   display: flex;
   width: 100%;
   padding: 0;
   justify-content: space-around;
+ 
+
   @include small-break {
     grid-template-columns: repeat(2, minmax(50%, 1fr));
     gap: 5px;
@@ -264,17 +281,18 @@ button.accordion.active + div {
 }
 .img{
  object-fit: cover;
- border: 1px solid #263137;
+ border-radius: 10px;
 
  min-width: 230px;
  aspect-ratio:  2/3;
- max-width: 250px;
+ max-width: 300px;
  @include mid-break{
   max-width: 200px;
   gap: 4px;
  }
  @include small-break{
-  max-width: 100px;
+  max-width: 200px;
+  min-width: 200px;
   gap: 4px;
  }
 }
